--- a/Home.html
+++ b/Home.html
@@ -14,13 +14,24 @@
     <h1>Hi, I'm Jonathan Mifsud</h1>
     <h2>Welcome to my Portfolio</h2>
     <p></p>
+
+    <!--Previous Work Examples-->
+    <div>
+        <h2>My Work</h2>
+        <h3>SimPlan</h3>
+        <p>A Student Planner application, developed as a team using C#.</p>
+        <h3>Tekh</h3>
+        <p>A Discord Bot for the UTS FEIT Server, developed as a team using Java.</p>
+    </div>
     <!--Certifications-->
     <div>
         <h2>Certifications</h2>
     </div>
-    <!--Previous Work Examples-->
+    <!--Experience-->
     <div>
-        <h2>My Work</h2>
+        <h2>Experience</h2>
+        <h3>UTS Esports</h3>
+        <p>Executive Member and Title Manager for Rainbow Six Siege.</p>
     </div>
 </body>
 </html>
