--- a/Home.html
+++ b/Home.html
@@ -5,33 +5,49 @@
     <title>Jonathan Mifsud - Home</title>
 </head>
 <body>
-    <!--NavBar-->
-    <div id="nabar">
-        <ul>
-            <li>Home</li>
-        </ul>
-    </div>
-    <h1>Hi, I'm Jonathan Mifsud</h1>
-    <h2>Welcome to my Portfolio</h2>
-    <p></p>
+    <header class="header">
+        <!--NavBar-->
+        <div id="navbar">
+            <ul>
+                <li>Home</li>
+                <li>About Me</li>
+                <li>Projects</li>
+                <li>Certifications</li>
+                <li>Experience</li>
+            </ul>
+        </div>
+    </header>
+    <!--Home-->
+    <h1>Jonno</h1>
 
-    <!--Previous Work Examples-->
+    <!--About Me-->
     <div>
-        <h2>My Work</h2>
+        <h2>Welcome, I'm Jonathan Mifsud</h2>
+        <h3>This is my portfolio</h3>
+    </div>
+    <!--Projects-->
+    <div>
+        <h2>Projects</h2>
         <h3>SimPlan</h3>
         <p>A Student Planner application, developed as a team using C#.</p>
         <h3>Tekh</h3>
         <p>A Discord Bot for the UTS FEIT Server, developed as a team using Java.</p>
     </div>
+
     <!--Certifications-->
     <div>
         <h2>Certifications</h2>
     </div>
+
     <!--Experience-->
     <div>
         <h2>Experience</h2>
         <h3>UTS Esports</h3>
         <p>Executive Member and Title Manager for Rainbow Six Siege.</p>
     </div>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
