File rename for Github pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <!--About Me-->
     <div>
         <h2>Welcome, I'm Jonathan Mifsud</h2>
-        <h3>This is my portfolio</h3>
+        <h3>My Interests</h3>
+        <ol>
+            <li>Gaming</li>
+        </ol>
     </div>
     <!--Projects-->
     <div>
