--- a/index.html
+++ b/index.html
@@ -2,55 +2,78 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
-    <title>Jonathan Mifsud - Home</title>
+    <title>Jonathan's Portfolio</title>
 </head>
 <body>
+    <script src="portfolio.js"></script>
+    <!--Header-->
     <header class="header">
-        <!--NavBar-->
+        <h1>Jonno</h1>
+    </header>
+    <!--NavBar-->
         <div id="navbar">
-            <ul>
-                <li>Home</li>
+            <a href="#about_me"> About Me </a>
+            <a href="#projects"> Projects </a>
+            <a href="#certifications"> Certifications </a>
+            <a href="#experience"> Experience </a>
+            <!--<ul>
                 <li>About Me</li>
                 <li>Projects</li>
                 <li>Certifications</li>
                 <li>Experience</li>
-            </ul>
+            </ul>-->
         </div>
-    </header>
-    <!--Home-->
-    <h1>Jonno</h1>
 
     <!--About Me-->
-    <div>
-        <h2>Welcome, I'm Jonathan Mifsud</h2>
-        <h3>My Interests</h3>
-        <ol>
-            <li>Gaming</li>
-        </ol>
-    </div>
-    <!--Projects-->
-    <div>
-        <h2>Projects</h2>
-        <h3>SimPlan</h3>
-        <p>A Student Planner application, developed as a team using C#.</p>
-        <h3>Tekh</h3>
-        <p>A Discord Bot for the UTS FEIT Server, developed as a team using Java.</p>
-    </div>
+    <div class="main"> </div>
+        <div class="section"> 
+            <h2 id="about_me"> // About Me</h2>
+            <p>Hi there, I'm Jonathan. Welcome to my Portfolio <br>
+            I'm graduated from the University of Technology, Sydney (UTS) with a Bachelor of Science in Information Technology, with a Major in Networking and Cybersecurity. <br>
+            I have a very strong interest in programming and Cybersecurity, having competed in various "Capture-The-Flag" competitions run by society events as well as having attended the Bsides Canberra 2021. <br>
+            <br> <br>
+            My interests include:
+            <ul>
+                <li> Understanding Cybersecurity tools & methods</li>
+                <li> Improving my Computer hardware skills</li>
+                <li> Building upon my current knowledge of coding languages (C, C#, JS, Java, HTML/CSS)</li>
+                <li> Playing Video Games</li>
+            </ul>
+            </p>
+        </div>
+        <!--Projects-->
+        <div class="section">
+            <h2 id="projects"> // Projects</h2>
+            <h3> >> SimPlan</h3>
+            <p>A Student Planner application, developed as a team using C#.</p>
+            <h3> >> FEIT Bot</h3>
+            <p> [ IN DEVELOPMENT ]<br>
+            A Discord Bot for the UTS FEIT Server, developed using Javascript. The bot's functions includes:
+        <ul>
+            <li> Easier navigation to the user's relevant subject chat channel.</li>
+            <li> Enable users to assign roles to themselves to enable access to other channels.</li>
+        </ul></p>
+        </div>
 
-    <!--Certifications-->
+        <!--Certifications-->
+        <div class="section">
+            <h2 id="certifications"> // Certifications</h2>
+            <p>INSERT CERTS HERE</p>
+        </div>
+
+        <!--Experience-->
+        <div class="section">
+            <h2 id="experience"> // Experience</h2>
+            <h4> >> UTS Esports > 2019 - 20020</h4>
+            <p>Executive Member and Title Manager for Rainbow Six Siege.<br>
+            This position included the organization and scheduling of university esport teams to compete in the Australian Esports League's Uni Cup, a national competition held every semester.<br>
+            My other responsibilities included planning events and marketing material to advertise our team's recruitment as well as members to attend club events.</p>
+            <h4> >> UTS Peer Network >> 2019 - 2020</h4>
+            <p>As a Peer Networker for new undergraduate students, i demonstrated leadership and communication skills by leading campus tours and assisting students in their transition to tertiary studies.</p>
+        </div>
     <div>
-        <h2>Certifications</h2>
-    </div>
-
-    <!--Experience-->
-    <div>
-        <h2>Experience</h2>
-        <h3>UTS Esports</h3>
-        <p>Executive Member and Title Manager for Rainbow Six Siege.</p>
-    </div>
-
-    <footer class="footer">
-
+    <footer>
+        <p>Jonathan Mifsud (2021)</p>
     </footer>
 </body>
 </html>
