--- a/index.html
+++ b/index.html
@@ -4,45 +4,53 @@
     <link rel="stylesheet" type="text/css" href="portfolio.css">
     <title>Jonathan's Portfolio</title>
 </head>
-<body>
+<body id="body">
     <script src="portfolio.js"></script>
     <!--Header-->
-    <header class="header">
+    <div class ="header">
         <h1>Jonno</h1>
-    </header>
+    </div>
     <!--NavBar-->
-        <div id="navbar">
-            <a href="#about_me"> About Me </a>
-            <a href="#projects"> Projects </a>
-            <a href="#certifications"> Certifications </a>
-            <a href="#experience"> Experience </a>
-            <!--<ul>
-                <li>About Me</li>
-                <li>Projects</li>
-                <li>Certifications</li>
-                <li>Experience</li>
-            </ul>-->
+        <div class="navbar">
+            <ul>
+                <li><a href="#about_me"> About Me </a></li>
+                <li><a href="#projects"> Projects </a></li>
+                <li><a href="#certifications"> Certifications </a></li>
+                <li><a href="#experience"> Experience </a></li>
+            </ul>
         </div>
 
     <!--About Me-->
     <div class="main"> </div>
-        <div class="section"> 
+        <div class="section1"> 
             <h2 id="about_me"> // About Me</h2>
-            <p>Hi there, I'm Jonathan. Welcome to my Portfolio <br>
-            I'm graduated from the University of Technology, Sydney (UTS) with a Bachelor of Science in Information Technology, with a Major in Networking and Cybersecurity. <br>
-            I have a very strong interest in programming and Cybersecurity, having competed in various "Capture-The-Flag" competitions run by society events as well as having attended the Bsides Canberra 2021. <br>
-            <br> <br>
-            My interests include:
+            <!--PROFILE IMAGE BROKEN-->
+            <img src="Jonathan_Mifsud.jpg alt=" alt="Profile Image" width="50" height="50">
+            <b> Name: </b>
+            <p>Jonathan Mifsud</p>
+            <br>
+            <b>Education: </b>
+            <p>Bachelor of Science in Information Technology (Major in Networking and Cybersecurity) from the University of Technology, Sydney</p>
+            <br>
+            <b>Skills: </b>
+            <ul>
+                <li> C </li>
+                <li> C# </li>
+                <li> Java </li>
+                <li> HTML / CSS </li>
+                <li> Javascript </li>
+            </ul>
+            <br>
+            <b>Interests: </b>
             <ul>
                 <li> Understanding Cybersecurity tools & methods</li>
                 <li> Improving my Computer hardware skills</li>
-                <li> Building upon my current knowledge of coding languages (C, C#, JS, Java, HTML/CSS)</li>
+                <li> Building upon my current knowledge of coding languages</li>
                 <li> Playing Video Games</li>
             </ul>
-            </p>
         </div>
         <!--Projects-->
-        <div class="section">
+        <div class="section2">
             <h2 id="projects"> // Projects</h2>
             <h3> >> SimPlan</h3>
             <p>A Student Planner application, developed as a team using C#.</p>
@@ -56,13 +64,13 @@
         </div>
 
         <!--Certifications-->
-        <div class="section">
+        <div class="section1">
             <h2 id="certifications"> // Certifications</h2>
             <p>INSERT CERTS HERE</p>
         </div>
 
         <!--Experience-->
-        <div class="section">
+        <div class="section2">
             <h2 id="experience"> // Experience</h2>
             <h4> >> UTS Esports > 2019 - 20020</h4>
             <p>Executive Member and Title Manager for Rainbow Six Siege.<br>
@@ -72,8 +80,8 @@
             <p>As a Peer Networker for new undergraduate students, i demonstrated leadership and communication skills by leading campus tours and assisting students in their transition to tertiary studies.</p>
         </div>
     <div>
-    <footer>
+    <div class="footer">
         <p>Jonathan Mifsud (2021)</p>
-    </footer>
+    </div>
 </body>
 </html>
